# chonker95

./: Cargo.toml  FIX_DOCUMENTATION.md  PDFiumConfig.cmake  args.gn  build_check.sh  build_test.sh  check_kitty_env.sh  chonker95.kdl  chonker95.sh  config.kdl  config.kdl.bak  debug_check.sh  final_test.sh  pdfium-mac-arm64.tgz  quick_test.sh  rebuild_and_test.sh  test_dark_mode.sh  test_final.sh  test_keys.sh  test_kitty_enhanced.sh  test_kitty_graphics.sh  test_persistence.sh  test_simple.sh  viuer-pane.sh
src/: main.rs  main_simple.rs  main_unified.rs  simple_text.rs
