[package]
name = "chonker95"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
quick-xml = { version = "0.38.3", default-features = false }
